# rag

./: .editorconfig  Cargo.toml  README.md
src/: error.rs  lib.rs  tests.rs
